[gd_scene load_steps=28 format=2]

[ext_resource path="res://sprites/physicsGun.png" type="Texture" id=1]
[ext_resource path="res://scenes/UIs/Exit.tscn" type="PackedScene" id=2]
[ext_resource path="res://scripts/Options.gd" type="Script" id=3]
[ext_resource path="res://sounds/menuSelect.wav" type="AudioStream" id=5]
[ext_resource path="res://MinecraftFive-Bold.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://LinkText.tres" type="DynamicFont" id=7]
[ext_resource path="res://sprites/physicsGunGlow.png" type="Texture" id=8]
[ext_resource path="res://sprites/physGunEquip-Sheet.png" type="Texture" id=9]
[ext_resource path="res://sprites/physglow.png" type="Texture" id=10]

[sub_resource type="DynamicFont" id=1]
size = 30
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=19]
size = 20
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=20]
size = 20
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=2]
size = 20
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=3]
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 6 )

[sub_resource type="AtlasTexture" id=12]
flags = 1
atlas = ExtResource( 8 )
region = Rect2( 0, 0, 34, 22 )

[sub_resource type="AtlasTexture" id=13]
flags = 1
atlas = ExtResource( 8 )
region = Rect2( 34, 0, 34, 22 )

[sub_resource type="AtlasTexture" id=14]
flags = 1
atlas = ExtResource( 8 )
region = Rect2( 68, 0, 34, 22 )

[sub_resource type="AtlasTexture" id=15]
flags = 1
atlas = ExtResource( 8 )
region = Rect2( 102, 0, 34, 22 )

[sub_resource type="AtlasTexture" id=16]
flags = 1
atlas = ExtResource( 8 )
region = Rect2( 136, 0, 34, 22 )

[sub_resource type="AtlasTexture" id=17]
flags = 1
atlas = ExtResource( 8 )
region = Rect2( 170, 0, 34, 22 )

[sub_resource type="AtlasTexture" id=5]
flags = 1
atlas = ExtResource( 9 )
region = Rect2( 0, 0, 34, 22 )

[sub_resource type="AtlasTexture" id=6]
flags = 1
atlas = ExtResource( 9 )
region = Rect2( 34, 0, 34, 22 )

[sub_resource type="AtlasTexture" id=7]
flags = 1
atlas = ExtResource( 9 )
region = Rect2( 68, 0, 34, 22 )

[sub_resource type="AtlasTexture" id=8]
flags = 1
atlas = ExtResource( 9 )
region = Rect2( 102, 0, 34, 22 )

[sub_resource type="AtlasTexture" id=9]
flags = 1
atlas = ExtResource( 9 )
region = Rect2( 136, 0, 34, 22 )

[sub_resource type="AtlasTexture" id=10]
flags = 1
atlas = ExtResource( 9 )
region = Rect2( 170, 0, 34, 22 )

[sub_resource type="SpriteFrames" id=18]
animations = [ {
"frames": [ SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ) ],
"loop": true,
"name": "New Anim",
"speed": 15.0
}, {
"frames": [ SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="Options" type="Node2D"]
script = ExtResource( 3 )

[node name="SliderChanged" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -7.228

[node name="Options" type="Label" parent="."]
margin_left = 10.0
margin_top = 10.0
margin_right = 164.0
margin_bottom = 55.0
rect_scale = Vector2( 2, 2 )
custom_fonts/font = SubResource( 1 )
text = "Options"

[node name="Volume" type="Label" parent="."]
margin_left = 13.0
margin_top = 123.0
margin_right = 109.0
margin_bottom = 153.0
custom_fonts/font = SubResource( 19 )
text = "Volume"

[node name="UITRansparaent" type="Label" parent="."]
margin_left = 16.0
margin_top = 184.0
margin_right = 340.0
margin_bottom = 214.0
custom_fonts/font = SubResource( 20 )
text = "bottom UI Transparency"

[node name="VolumeAmount" type="Label" parent="."]
visible = false
margin_left = 261.0
margin_top = 143.0
margin_right = 605.0
margin_bottom = 173.0
custom_fonts/font = SubResource( 2 )
text = "SHIT CUM AND FUCKING COCK"

[node name="UIAmount" type="Label" parent="."]
margin_left = 261.0
margin_top = 206.0
margin_right = 362.0
margin_bottom = 236.0
custom_fonts/font = SubResource( 2 )
text = "oh fuck"

[node name="Control" type="Label" parent="."]
margin_left = 16.0
margin_top = 387.0
margin_right = 149.0
margin_bottom = 417.0
custom_fonts/font = ExtResource( 7 )
text = "Controls:"

[node name="real" type="Label" parent="Control"]
margin_left = 1.0
margin_top = 25.0
margin_right = 134.0
margin_bottom = 55.0
rect_scale = Vector2( 0.6, 0.6 )
custom_fonts/font = ExtResource( 7 )
text = "wasd - move around
1,2,3 - hotbar shiz
right click - rotate held object
e - interact
q - spawn menu
shift - sprint
v - noclip
t - teleport to cursor
m - toggle map view"

[node name="Exit" parent="." instance=ExtResource( 2 )]
margin_left = 931.0
margin_top = 554.0
margin_right = 1016.0
margin_bottom = 599.0

[node name="VolumeSlider" type="HSlider" parent="."]
margin_left = 13.0
margin_top = 150.0
margin_right = 255.0
margin_bottom = 166.0
focus_mode = 0
min_value = -50.0
max_value = 10.0
rounded = true
scrollable = false
tick_count = 5

[node name="UItransparency" type="HSlider" parent="."]
margin_left = 15.0
margin_top = 213.0
margin_right = 257.0
margin_bottom = 229.0
focus_mode = 0
max_value = 10.0
rounded = true
scrollable = false
tick_count = 5

[node name="Fullscreen" type="CheckBox" parent="."]
margin_left = 9.0
margin_top = 271.0
margin_right = 157.0
margin_bottom = 321.0
focus_mode = 0
custom_fonts/font = SubResource( 3 )
shortcut_in_tooltip = false
enabled_focus_mode = 0
text = "Fullscreen"

[node name="MusicToggle" type="CheckBox" parent="."]
margin_left = 9.0
margin_top = 231.0
margin_right = 157.0
margin_bottom = 281.0
focus_mode = 0
custom_fonts/font = SubResource( 3 )
shortcut_in_tooltip = false
pressed = true
enabled_focus_mode = 0
text = "music"

[node name="FPSCounter" type="CheckBox" parent="."]
margin_left = 9.0
margin_top = 313.0
margin_right = 161.0
margin_bottom = 363.0
focus_mode = 0
custom_fonts/font = SubResource( 3 )
shortcut_in_tooltip = false
pressed = true
enabled_focus_mode = 0
text = "Fps counter"

[node name="Glow" type="CheckBox" parent="."]
margin_left = 9.0
margin_top = 353.0
margin_right = 305.0
margin_bottom = 403.0
focus_mode = 0
custom_fonts/font = SubResource( 3 )
shortcut_in_tooltip = false
pressed = true
enabled_focus_mode = 0
text = "glow (or bloom i dont knwo)"

[node name="changephysguncolor" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="Label" type="Label" parent="changephysguncolor"]
margin_left = 457.0
margin_top = 19.0
margin_right = 755.0
margin_bottom = 49.0
custom_fonts/font = ExtResource( 7 )
text = "change physgun color"

[node name="PhysPicker" type="ColorPicker" parent="changephysguncolor"]
margin_left = 819.0
margin_top = 82.0
margin_right = 1127.0
margin_bottom = 518.0
rect_scale = Vector2( 0.8, 0.8 )
color = Color( 0.407843, 0.831373, 1, 1 )
presets_enabled = false
presets_visible = false

[node name="heldgun" type="AnimatedSprite" parent="changephysguncolor"]
position = Vector2( 590, 85 )
scale = Vector2( 3, 3 )
frames = SubResource( 18 )
animation = "New Anim"
frame = 1
playing = true
offset = Vector2( 30, 0 )

[node name="physgun" type="Sprite" parent="changephysguncolor/heldgun"]
show_behind_parent = true
position = Vector2( 30, 0 )
texture = ExtResource( 1 )

[node name="Physglow" type="Sprite" parent="changephysguncolor"]
position = Vector2( 728, 85 )
texture = ExtResource( 10 )

[node name="ChangePlayerImage" type="Button" parent="."]
visible = false
margin_left = 14.0
margin_top = 268.0
margin_right = 302.0
margin_bottom = 304.0
custom_fonts/font = ExtResource( 7 )
text = "change player image"

[node name="FileDir" type="Label" parent="."]
visible = false
modulate = Color( 0, 0, 0, 1 )
margin_left = 313.0
margin_top = 280.0
margin_right = 353.0
margin_bottom = 294.0

[node name="ConfirmationDialog" type="ConfirmationDialog" parent="."]
margin_left = 269.0
margin_top = 184.0
margin_right = 469.0
margin_bottom = 276.0
window_title = "Resolution Changes."

[node name="Label2" type="Label" parent="ConfirmationDialog"]
margin_left = 8.0
margin_top = 8.0
margin_right = 192.0
margin_bottom = 56.0
text = "Changing resolution causes
the game to bug out HARD.
Proceed with Caution."

[node name="FileDialog" type="FileDialog" parent="."]
margin_left = 64.0
margin_top = 27.0
margin_right = 641.0
margin_bottom = 345.0
window_title = "Open a File"
dialog_text = "yea"
mode = 0
access = 2

[connection signal="button_up" from="Exit" to="." method="_on_Exit_button_up"]
[connection signal="drag_ended" from="VolumeSlider" to="." method="_on_HSlider_drag_ended"]
[connection signal="value_changed" from="VolumeSlider" to="." method="_on_VolumeSlider_value_changed"]
[connection signal="drag_ended" from="UItransparency" to="." method="_on_HSlider_drag_ended"]
[connection signal="value_changed" from="UItransparency" to="." method="_on_UItransparency_value_changed"]
[connection signal="toggled" from="Fullscreen" to="." method="_on_Fullscreen_toggled"]
[connection signal="toggled" from="MusicToggle" to="." method="_on_MusicToggle_toggled"]
[connection signal="toggled" from="FPSCounter" to="." method="_on_Fullscreen2_toggled"]
[connection signal="toggled" from="Glow" to="." method="_on_Glow_toggled"]
[connection signal="color_changed" from="changephysguncolor/PhysPicker" to="." method="_on_PhysPicker_color_changed"]
[connection signal="button_up" from="ChangePlayerImage" to="." method="_on_ChangePlayerImage_button_up"]
[connection signal="file_selected" from="FileDialog" to="." method="_on_FileDialog_file_selected"]
